# cronus

./: .gitignore  .npmignore  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json  publish.sh  test.ts  tsca  tsconfig.build.json  tsconfig.json  zeus  zeus.ohm
dev/: publish.ps1  publish.sh
docs/: getting-started.md  index.html  index.md
docs/generators/: openapi.md  rust.md  rust_axum.md  typescript.md
docs/references/: api.md  yaml.md
examples/proto/: address.proto  common.proto  event.proto  main.proto  user.proto
examples/proto-generated/: clients.ts  controllers.ts  entities.ts  resolvers.ts  schema.graphql  types.ts  zeusHelpers.ts
examples/simple/: u1.ts
examples/todo/: Cargo.toml  main.api  main.yaml
examples/todo-py/: main.api
examples/todo-rs/: main.api
examples/todo/src/: generated.rs  main.rs
examples/user-usecase/: tsca.yaml  zeus.yaml
examples/user-usecase/defs/: core.yaml  type.yaml
examples/zeus/: common.zeus  user.zeus
generators/openapi/: index.html
generators/rust/: index.html
generators/rust_axum/: index.html
generators/ts/: index.html
generators/ts_nestjs/: index.html
lib/generator/: Cargo.toml
lib/generator-wasm/: Cargo.toml
lib/generator-wasm/src/: lib.rs
lib/generator/src/: golang.rs  golang_gin.rs  lib.rs  openapi.rs  openapi_utils.rs  python.rs  python_fastapi.rs  python_redis.rs  rust.rs  rust_axum.rs  rust_utils.rs  tauri.rs  ts.rs  ts_nestjs.rs  utils.rs
lib/generator/testdata/hello/rust/: Cargo.toml  main.api
lib/generator/testdata/hello/rust/src/: generated.rs  main.rs
lib/generator/testdata/hello/rust_axum/: Cargo.toml  main.api
lib/generator/testdata/hello/rust_axum/src/: generated.rs  main.rs
lib/parser/: Cargo.toml
lib/parser/src/: api.pest  api_parse.rs  api_parser.rs  lib.rs
lib/spec/: Cargo.toml
lib/spec/src/: lib.rs
lib/spec/testdata/: parse_yaml_happy.yaml
references/api/: index.html
references/yaml/: index.html
search/: search_index.json
src/: app.module.ts  base.ts  config.ts  context.ts  decorators.ts  graphql.ts  loader.ts  main.ts  ohm.spec.ts  ohm.ts  proto.ts  registry.ts  rest-nestjs.ts  types.spec.ts  types.ts  ur.spec.ts  ur.ts
src/cmd/: dump.ts  gen.ts
src/gen-deps/: rest-nestjs.ts
src/util/: context.ts  ts-type.ts  type.ts
test/: app.e2e-spec.ts  ext.graphql
test/example-service/: zeus.yaml
test/example-service/defs/: service.yaml
