[workspace]
members = [
    "lib/parser",
    "lib/generator",
    "bin/cli",
    "lib/spec",
    "lib/generator-wasm"
]
resolver = "2"

[workspace.package]
version = "0.4.1"

[workspace.dependencies]
cronus_spec = { path = "lib/spec", version = "0.4.0" }
cronus_parser = { path = "lib/parser", version = "0.4.0" }
cronus_generator = { path = "lib/generator", version = "0.4.0" }
serde_yaml = "0.9.33"