[package]
name = "cronus_generator_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cronus_spec = { path = "../spec" }
cronus_parser = { path = "../parser" }
cronus_generator = { path = "../generator" }