[package]
name = "cronus_generator_wasm"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cronus_spec =  { workspace = true }
cronus_parser =  { workspace = true }
cronus_generator =  { workspace = true }