[package]
name = "cronus_generator"
version = "0.1.0"
edition = "2021"
description = "The generators for cronus API spec."
license = "MIT"

[dependencies]
cronus_spec = { path = "../spec", version = "0.1.0" }
cronus_parser = { path = "../parser", version = "0.1.0" }
convert_case = "0.6.0"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"