[package]
name = "cronus_generator"
version.workspace = true
edition = "2021"
description = "The generators for cronus API spec."
license = "MIT"
repository = "https://github.com/theogonic/cronus"
documentation = "https://theogonic.github.io/cronus/"

[dependencies]
cronus_spec =  { workspace = true }
cronus_parser =  { workspace = true }
convert_case = "0.6.0"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"