[package]
name = "cronus_parser"
version.workspace = true
edition = "2021"
description = "The DSL parser for cronus API spec."
license = "MIT"
repository = "https://github.com/theogonic/cronus"
documentation = "https://theogonic.github.io/cronus/"

[dependencies]
pest="2.7.5"
pest_derive = "2.7.5"
cronus_spec = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tracing = "0.1"
anyhow = "1.0"