[package]
name = "cronus_spec"
version = "0.1.0"
edition = "2021"
description = "The definitions for cronus API spec."
license = "MIT"
repository = "https://github.com/theogonic/cronus"
documentation = "https://theogonic.github.io/cronus/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"